@@ -1,0 +1,22 @@
+
+    <h2>Site</h2>
+<ul class="nav nav-sidebar">
+    <li <?php if($pageName=="home"||$pageName==NULL) echo "class=\"active\""; ?>><a href="?pageName=home"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;Visão Geral<span class="sr-only">(current)</span></a></li>
+    <li <?php if($pageName=="layout") echo "class=\"active\""; ?>><a href="?pageName=layout"><span class="glyphicon glyphicon-tasks"></span>&nbsp;&nbsp;Layout</a></li>
+    <li <?php if($pageName=="settings") echo "class=\"active\""; ?>><a href="?pageName=settings"><span class="glyphicon glyphicon-wrench"></span>&nbsp;&nbsp;Configurações</a></li>
+</ul>
+<!--    <h2>Associados</h2>
+<ul class="nav nav-sidebar">
+    <li><a href="">Nav item</a></li>
+    <li><a href="">Nav item again</a></li>
+    <li><a href="">One more nav</a></li>
+    <li><a href="">Another nav item</a></li>
+    <li><a href="">More navigation</a></li>
+</ul>
+<ul class="nav nav-sidebar">
+    <li><a href="">Nav item again</a></li>
+    <li><a href="">One more nav</a></li>
+    <li><a href="">Another nav item</a></li>
+</ul>-->
+
+<p class="text-center">Desenvolvido por ByteGod IT Solutions</p>
