@@ -3,8 +3,9 @@
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
-            <file>file:/C:/xampp/htdocs/AJEMS/site/index.php</file>
+            <file>file:/C:/xampp/htdocs/AJEMS/Views/index.php</file>
             <file>file:/C:/xampp/htdocs/AJEMS/changelog</file>
+            <file>file:/C:/xampp/htdocs/AJEMS/Views/assets/css/theme.css</file>
         </group>
     </open-files>
 </project-private>
