@@ -1,3 +1,10 @@
+* Versão 0.10.20160528_2227-MG
+
+- Melhorias de layout na tela index.php
+- Adicionado layout de administração
+
+Carga: 1h34m
+
 * Versão 0.9.20160527_2013-MG
 
 - Melhorias de layout na tela index.php
